<resources>
    <string name="app_name">AplikasiGithubUserAPI</string>

    <string name="Username">Username</string>
    <string name="Url">URL</string>
    <string name="search_hint">Insert Username</string>
    <string name="search">Search</string>
    <string name="Name">Name</string>
    <string name="Location">Location</string>
    <string name="company">Company</string>
    <string name="repository">repository</string>
    <string name="follower">follower</string>
    <string name="following">following</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Followings</string>

</resources>